k8s_manifest_files_practice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web-app
  labels:
    app: java-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-web-app
  template:
    metadata:
      labels:
        app: java-web-app
    spec:
      containers:
        - name: myapp
          image: uday8devops/myapp:v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: db-secret
              mountPath: "/etc/foo"
      volumes:
        - name: db-secret
          secret:
            secretName: secret-basic-auth
