k8s_manifest_files_practice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-java-sample
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/bar"
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
